@@ -3,3 +3,4 @@
 mod message;
 
 pub use message::Message;
+pub use message::InternalMessage;
